# knightsofalentejo

./: .gitignore  .gitmodules  README.md  alentejo_promo_v1.xcf  build.gradle  build.gradle.kts  gradle.properties
ItCameDroid-AS/: import-summary.txt
ItCameDroid-AS/app/: build.gradle
ItCameDroid-AS/app/src/main/: AndroidManifest.xml
KnightsOfAlentejoAndroid-AS/: build.gradle  import-summary.txt  settings.gradle
KnightsOfAlentejoAndroid-AS/app/: build.gradle
KnightsOfAlentejoAndroid-AS/app/src/main/: AndroidManifest.xml
KnightsOfAlentejoAndroid-AS/app/src/main/assets/: fragment.glsl  vertex.glsl
KnightsOfAlentejoAndroid-AS/app/src/main/cpp/: GLES2Renderer.cpp  LightningStrategy.cpp  LightningStrategy.h  NativeBitmap.cpp  NdkGlue.cpp  Texture.cpp  Texture.h
KnightsOfAlentejoAndroid-AS/app/src/main/jni/: GLES2Lesson.cpp  GLES2Lesson.h  GLES2Renderer.cpp  GLES2Renderer.h  LightningStrategy.cpp  LightningStrategy.h  NativeBitmap.cpp  NativeBitmap.h  NdkGlue.cpp  Texture.cpp  Texture.h
KnightsOfAlentejoAndroid-AS/common_includes/: android_asset_operations.h
KnightsOfAlentejoAndroid-AS/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GLES2Renderer.cpp  GLES2Renderer.h  LightningStrategy.cpp  LightningStrategy.h  NativeBitmap.h  NdkGlue.cpp  Texture.cpp  Texture.h
app/src/main/res/anim/: fade_in_fast.xml  fade_out.xml  fade_out_fade_in.xml  fade_out_fast.xml  hold.xml
app/src/main/res/drawable/: appicon.xml  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
(+142 files in other folders)
